--- a/Reydit/Views/User/Register.cshtml
+++ b/Reydit/Views/User/Register.cshtml
@@ -12,5 +12,7 @@
     <input type="email" name="email" />
     <h3>Password</h3>
     <input type="password" name="password" />
+    <h3>Confirm Password</h3>
+    <input type="password" name="password2" />
     <input type="submit" />
 }
