--- a/Reydit/Content/Site.css
+++ b/Reydit/Content/Site.css
@@ -66,3 +66,22 @@ div.sidebar-block > p:first-child {
 div.sidebar-block a {
     display: block;
 }
+
+div.post-block {
+    border: 1px solid #8080A0;
+    border-radius: 4px;
+    padding: 8px 10px;
+    margin: 4px 2px;
+}
+
+div.post-block > a:first-child {
+    font-weight: 500;
+    font-size: 16pt;
+    display: block;
+}
+
+div.post-block > p:first-child {
+    font-size: 11px;
+    font-weight: 500;
+    color: #8080A0;
+}
